# category-theory

./: .gitignore  CHANGELOG.md  README.md  category-theory.cabal  categoy-theory.cabal  girlfriendcaps.txt  makefile
app/: DiagramChasing.hs  GraphFunctor.hs  Main.hs  PrintFiniteCat.hs
app/Categories/: Category.hs  EmbGr.hs  EmbGraph.hs  FinPoset.hs  FinSet.hs  Finite.hs  Graph.hs  SimpleGraph.hs
app/Constructions/: Category.hs  CoProduct.hs  InitialObject.hs
app/Examples/: CoProduct.hs  FinPoset.hs  Finite.hs  IniteObject.hs
app/UniversalConstructions/: InitialObject.hs
