cabal-version:      2.4
name:               category-theory
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             rennelou
maintainer:         rennelou@outlook.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable category-theory
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Constructions.Category,
                   Constructions.InitialObject,
                   Constructions.CoProduct,
                   Categories.SimpleGraph,
                   Categories.Finite,
                   Categories.FinPoset,
                   Categories.EmbGraph,
                   Examples.Finite,
                   Examples.FinPoset,
                   Examples.IniteObject

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, containers
    hs-source-dirs:   app
    default-language: Haskell2010
